demo/demo.css
.text-center {
  text-align: center;
}

.is-danger {
  background: red;
  color: #fff;
}

.is-danger:hover,
.is-danger:focus {
  background: darkred;
}

.highlight-col {
  background-color: palegoldenrod;
}

tr.approved td {
  background-color: paleturquoise;
}

tr.pending td {
  background-color: azure;
}

body {
  overflow-x: auto;
}

.resize-me {
  border: 2px dashed #ccc;
  margin-bottom: 1rem;
  min-width: 320px;
  overflow: auto;
  padding: 2rem 1rem;
  position: relative;
  resize: horizontal;
}
.resize-me:after {
  color: #666;
  font-size: 0.825rem;
  line-height: 0;
  position: absolute;
  bottom: 0.75rem;
  content: "Resize me!";
  right: 0.85rem;
}

